Implement native scroll actions +semver: feature - cover with tests - add localization values for scrolling actions

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/be.json
@@ -66,7 +66,10 @@
   "loc.movingFrom": "Адводзім курсор мышы ад элемента",
   "loc.radio": "Радыёкнопка",
   "loc.scrolling.center.js": "Пракручваем старонку да цэнтра элемента праз JavaScript",
-  "loc.scrolling.js": "Пракручваем старонку праз JavaScript",
+  "loc.scrolling.js": "Пракручваем старонку да элемента праз JavaScript",
+  "loc.scrolling": "Пракручваем старонку да элемента",
+  "loc.scrolling.by": "Пракручваем на ({0},{1})",
+  "loc.scrolling.by.js": "Пракручваем на ({0},{1}) праз JavaScript",
   "loc.selecting.value": "Выбіраем значэнне - '{0}'",
   "loc.deselecting.value": "Адмяняем выбар значэння - '{0}'",
   "loc.send.text": "Задаем тэкст - '{0}'",
