--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -66,7 +66,10 @@
   "loc.movingFrom": "Сдвиг курсора с элемента",
   "loc.radio": "Радиокнопка",
   "loc.scrolling.center.js": "Скроллинг в центр посредством JavaScript",
-  "loc.scrolling.js": "Скроллинг с помощью JavaScript",
+  "loc.scrolling.js": "Скроллинг к элементу с помощью JavaScript",
+  "loc.scrolling": "Скроллинг к элементу",
+  "loc.scrolling.by": "Скроллинг на ({0},{1})",
+  "loc.scrolling.by.js": "Скроллинг на ({0},{1}) с помощью JavaScript",
   "loc.selecting.value": "Выбор значения - '{0}'",
   "loc.deselecting.value": "Отмена выбора значения - '{0}'",
   "loc.send.text": "Ввод текста - '{0}'",
