--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/uk.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/uk.json
@@ -66,7 +66,10 @@
   "loc.movingFrom": "Переміщення миші від елемента",
   "loc.radio": "Радіокнопка",
   "loc.scrolling.center.js": "Прокрутка до центру за допомогою JavaScript",
-  "loc.scrolling.js": "Прокрутка за допомогою JavaScript",
+  "loc.scrolling.js": "Прокрутка до елемента за допомогою JavaScript",
+  "loc.scrolling": "Прокрутка до елемента",
+  "loc.scrolling.by": "Прокрутка на ({0},{1})",
+  "loc.scrolling.by.js": "Прокрутка на ({0},{1}) за допомогою JavaScript",
   "loc.selecting.value": "Вибір значення - '{0}'",
   "loc.deselecting.value": "Скасування выбору значення - '{0}'",
   "loc.send.text": "Встановлення тексту - '{0}'",
