--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -66,7 +66,10 @@
   "loc.movingFrom": "Moving mouse from element",
   "loc.radio": "RadioButton",
   "loc.scrolling.center.js": "Scrolling to the center via JavaScript",
-  "loc.scrolling.js": "Scrolling via JavaScript",
+  "loc.scrolling.js": "Scrolling to element via JavaScript",
+  "loc.scrolling": "Scrolling to element",
+  "loc.scrolling.by": "Scrolling by ({0},{1})",
+  "loc.scrolling.by.js": "Scrolling by ({0},{1}) via JavaScript",
   "loc.selecting.value": "Selecting value - '{0}'",
   "loc.deselecting.value": "Deselecting value - '{0}'",
   "loc.send.text": "Setting text - '{0}'",
