--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/pl.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/pl.json
@@ -66,7 +66,10 @@
   "loc.movingFrom": "Przesuwanie myszy z elementu",
   "loc.radio": "RadioButton",
   "loc.scrolling.center.js": "Przewijanie do centrum przez JavaScript",
-  "loc.scrolling.js": "Przewijanie przez JavaScript",
+  "loc.scrolling.js": "Przewijanie do elementu przez JavaScript",
+  "loc.scrolling": "Przewijanie do elementu",
+  "loc.scrolling.by": "Przewijanie o ({0},{1})",
+  "loc.scrolling.by.js": "Przewijanie o ({0},{1}) przez JavaScript",
   "loc.selecting.value": "Wybieranie wartości - '{0}'",
   "loc.deselecting.value": "Anulowanie wybierania wartości - '{0}'",
   "loc.send.text": "Ustawianie tekstu - '{0}'",
